add projects page design

--- a/index.html
+++ b/index.html
@@ -32,7 +32,30 @@
           <h2 class="jobTitle">and Designer</h2>
         </div>
       </div>
-      <div class="projects"></div>
+      <div class="projects">
+        <h1 class="projectsTitle">Here are some of my projects</h1>
+        <div class="project">
+          <div class="phone">
+            <img src="./img/phone.png" alt="" />
+            <div class="phoneScreen">
+              <!-- <img src="" alt="" class="phoneApp" /> -->
+            </div>
+          </div>
+          <di v class="projectDetail">
+            <h1 class="projectTitle">Vortex</h1>
+            <p class="projectDesc">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio architecto aliquam quibusdam officiis nostrum sit amet
+              voluptatibus, saepe nihil, iste ut. Enim mollitia magni
+              praesentium expedita! Ducimus animi cum, adipisci quaerat, modi
+              natus, voluptates quod aliquid est soluta inventore commodi
+              repellendus officia totam. Ex, deserunt veritatis distinctio est
+              fugit laborum.
+            </p>
+            <button class="projectButton">Learn More</button>
+          </di>
+        </div>
+      </div>
       <div class="github"></div>
     </div>
     <script src="./app.js"></script>
