--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
-    <title>My Portfolio</title>
   </head>
   <body>
     <div class="container">
+      <!-- INTRODUCTION -->
       <div class="intro">
         <div class="salute">
           <div class="saluteTextContainer">
             <h1 class="saluteText">Hi</h1>
           </div>
           <div class="saluteImgContainer">
-            <img src="./img/person.png" alt="saluteImg" />
+            <img src="./img/person.png" alt="" class="saluteImg" />
           </div>
         </div>
         <div class="nameContainer">
-          <h2 class="name">I'm Mücahit</h2>
+          <h2 class="name">I'm John</h2>
         </div>
         <div class="jobTitleContainer dark">
           <h2 class="jobTitle">a Web Developer</h2>
@@ -32,73 +32,74 @@
           <h2 class="jobTitle">and Designer</h2>
         </div>
       </div>
+      <!-- PROJECTS -->
       <div class="projects">
         <h1 class="projectsTitle">Here are some of my projects</h1>
         <div class="project">
           <div class="phone">
             <img src="./img/phone.png" alt="" />
             <div class="phoneScreen">
-              <!-- <img src="" alt="" class="phoneApp" /> -->
+              <img src="./img/phoneApp.png" alt="" class="phoneApp" />
             </div>
           </div>
-          <di v class="projectDetail">
+          <div class="projectDetail">
             <h1 class="projectTitle">Vortex</h1>
             <p class="projectDesc">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Distinctio architecto aliquam quibusdam officiis nostrum sit amet
-              voluptatibus, saepe nihil, iste ut. Enim mollitia magni
-              praesentium expedita! Ducimus animi cum, adipisci quaerat, modi
-              natus, voluptates quod aliquid est soluta inventore commodi
-              repellendus officia totam. Ex, deserunt veritatis distinctio est
-              fugit laborum.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
+              vitae nihil quasi recusandae? Nesciunt laudantium recusandae illo
+              veritatis possimus! Accusamus repudiandae quia natus et iste earum
+              ab fugiat eum ipsam, illum vitae nihil quasi recusandae? Nesciunt
+              laudantium recusandae illo veritatis possimus! laudantium
+              recusandae illo veritatis possimus! recusandae illo veritatis.
             </p>
             <button class="projectButton">Learn More</button>
-          </di>
+          </div>
         </div>
         <div class="project">
           <div class="laptop">
             <img src="./img/laptop.png" alt="" />
             <div class="laptopScreen">
-              <!-- <img src="" alt="" class="laptopApp" /> -->
+              <img src="./img/laptopApp.png" alt="" class="laptopApp" />
             </div>
           </div>
-          <di v class="projectDetail">
+          <div class="projectDetail">
             <h1 class="projectTitle">Vortex</h1>
             <p class="projectDesc">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Distinctio architecto aliquam quibusdam officiis nostrum sit amet
-              voluptatibus, saepe nihil, iste ut. Enim mollitia magni
-              praesentium expedita! Ducimus animi cum, adipisci quaerat, modi
-              natus, voluptates quod aliquid est soluta inventore commodi
-              repellendus officia totam. Ex, deserunt veritatis distinctio est
-              fugit laborum.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
+              vitae nihil quasi recusandae? Nesciunt laudantium recusandae illo
+              veritatis possimus! Accusamus repudiandae quia natus et iste earum
+              ab fugiat eum ipsam, illum vitae nihil quasi recusandae? Nesciunt
+              laudantium recusandae illo veritatis possimus! laudantium
+              recusandae illo veritatis possimus! recusandae illo veritatis.
             </p>
             <button class="projectButton">Learn More</button>
-          </di>
+          </div>
         </div>
         <div class="project">
           <div class="phone">
             <img src="./img/phone.png" alt="" />
             <div class="phoneScreen">
-              <!-- <img src="" alt="" class="phoneApp" /> -->
+              <img src="./img/phoneApp.png" alt="" class="phoneApp" />
             </div>
           </div>
-          <di v class="projectDetail">
+          <div class="projectDetail">
             <h1 class="projectTitle">Vortex</h1>
             <p class="projectDesc">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Distinctio architecto aliquam quibusdam officiis nostrum sit amet
-              voluptatibus, saepe nihil, iste ut. Enim mollitia magni
-              praesentium expedita! Ducimus animi cum, adipisci quaerat, modi
-              natus, voluptates quod aliquid est soluta inventore commodi
-              repellendus officia totam. Ex, deserunt veritatis distinctio est
-              fugit laborum.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              repudiandae quia natus et iste earum ab fugiat eum ipsam, illum
+              vitae nihil quasi recusandae? Nesciunt laudantium recusandae illo
+              veritatis possimus! Accusamus repudiandae quia natus et iste earum
+              ab fugiat eum ipsam, illum vitae nihil quasi recusandae? Nesciunt
+              laudantium recusandae illo veritatis possimus! laudantium
+              recusandae illo veritatis possimus! recusandae illo veritatis.
             </p>
             <button class="projectButton">Learn More</button>
-          </di>
+          </div>
         </div>
       </div>
-      // GİTHUB SECTİON
+      <!-- GITHUB -->
       <div class="githubContainer">
         <h1 class="githubTitle">Want to see all projects?</h1>
         <div class="githubChart">
@@ -117,7 +118,13 @@
             <span>Dec</span>
           </div>
           <div class="boxContainer"></div>
-          <h1 class="githubTitle">On Github</h1>
+          <h1 class="githubTitle">ON GITHUB</h1>
+        </div>
+        <div class="githubSm">
+          <a href="">
+            <img src="./img/github.png" alt="" />
+          </a>
+          <h2>Find Me on Github</h2>
         </div>
       </div>
     </div>
